@@ -4,36 +4,25 @@ import az.edu.ada.wm2.lab6.model.Category;
 import az.edu.ada.wm2.lab6.model.Product;
 import az.edu.ada.wm2.lab6.model.dto.ProductRequestDto;
 import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
-import org.springframework.stereotype.Component;
+import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
-@Component
-public class ProductMapper {
+@Mapper(componentModel = "spring")
+public interface ProductMapper {
 
-    public ProductResponseDto toResponseDto(Product product) {
-        ProductResponseDto dto = new ProductResponseDto();
-        dto.setId(product.getId());
-        dto.setProductName(product.getProductName());
-        dto.setPrice(product.getPrice());
-        dto.setExpirationDate(product.getExpirationDate());
-        dto.setCategoryNames(mapCategoriesToNames(product.getCategories()));
-        return dto;
-    }
+    @Mapping(target = "categoryNames", source = "categories")
+    ProductResponseDto toResponseDto(Product product);
 
-    public Product toEntity(ProductRequestDto dto) {
-        Product product = new Product();
-        product.setProductName(dto.getProductName());
-        product.setPrice(dto.getPrice());
-        product.setExpirationDate(dto.getExpirationDate());
-        return product;
-    }
+    @Mapping(target = "id", ignore = true)
+    @Mapping(target = "categories", ignore = true)
+    Product toEntity(ProductRequestDto dto);
 
-    private List<String> mapCategoriesToNames(Set<Category> categories) {
+    default List<String> mapCategoriesToNames(List<Category> categories) {
+        if (categories == null) return List.of();
         return categories.stream()
                 .map(Category::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
